test/negative/307_unbound_function_call.fx
// expect: not found
val y = totally_undefined_fn(3)
println(y)
